--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
-<header class="flex justify-center">
-    <img src="" alt="sandra photo">
-
-    <nav>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/projects">Projects</a>
-        <a href="/contact">Contact</a>
+<header class="flex justify-center items-center py-5 w-[1120px] mx-auto">
+    
+    <nav class="flex flex-row gap-x-10 opacity-80">
+        <a href="#top">Inicio</a>
+        <a href="#experiencia">Experiencia</a>
+        <a href="#sobre-mi">Sobre mí</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#contacto">Contacto</a>
     </nav>
 </header>
