--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,16 +3,16 @@ import ExperienceItem from "./ExperienceItem.astro"
 
 const EXPERIENCE = [
     {
-        date: "February 2022",
-        title: "Application",
-        description: "Get access ",
-        link: "#",
+        date: "September 2023 - Currently",
+        title: "Software Developer",
+        description: "Footwear management application development with the TALL stack. Front end and back end development.",
+        link :""
     },
     {
-        date: "February 2022",
-        title: "Application",
-        description: "Get access ",
-        link: "#",
+        date: "February 2023 - April 2023",
+        title: "Web Developer",
+        description: "Website development with academy and online store in CMS Wordpress, including instructors, students, courses, etc.",
+        link :""
     }
 ]
 ---
