--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 <header class="flex justify-center items-center py-5 w-[1120px] mx-auto">
     
     <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="#top">Inicio</a>
-        <a href="#experiencia">Experiencia</a>
-        <a href="#sobre-mi">Sobre mí</a>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#contacto">Contacto</a>
+        <a href="#top">Home</a>
+        <a href="#experience">Experience</a>
+        <a href="#about-me">About me</a>
+        <a href="#proyects">Projects</a>
+        <a href="#contact">Contact</a>
     </nav>
 </header>
