--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import { ACTION_ERROR_CODES } from 'astro:actions';
 import Briefcase from '../icons/Briefcase.astro';
 ---
 
-<Layout title="Sandra Montero. Ingeniera Informática especializada en IA."
+<Layout title="Sandra Montero. Computer Engineer specialized in AI."
 		description="">
 	<main>
 		<SectionContainer class="py-44 pb-20">
@@ -21,22 +21,22 @@ import Briefcase from '../icons/Briefcase.astro';
 				alt="sandra photo" />
 			<h1 class="text-white text-5xl font-bold flex flex-row
 				gap-x-4 pb-10">
-				Hola! Soy sandra 
+				Hey, I'm sandra  
 				<a
 					href="https://www.linkedin.com/in/sandramonterosanz/"
 					target="_blank"
 					rel="noopener"
 					class="flex justify-center items-center">
 						<div class="flex justify-center items-center">
-							<Badge>Disponible</Badge>
+							<Badge>Available</Badge>
 						</div>
 				</a>
 			</h1>
 
 			<h2 class="text-2xl opacity-80 text-wrap">
-				<span class="text-purple-600">Ingeniera Informática</span> <span class="opacity-80">especializada en la</span>
-				<span class="font-bold"> IA</span>.
-				<span class="text-red-100/90"> De Alicante, España. </span>
+				<span class="text-purple-600">Computer Engineer</span> <span class="opacity-80">specialized in </span>
+				<span class="font-bold">AI</span>.
+				<span class="text-red-100/90"> From Alicante, España. </span>
 			</h2>
 
 			<nav class="flex gap-x-4 mt-8">
@@ -46,20 +46,20 @@ import Briefcase from '../icons/Briefcase.astro';
 				</SocialPill>
 				<SocialPill href="https://github.com/saandys">
 					<GitHub class="size-6" />
-					GitHub
+						GitHub
 				</SocialPill>
 				<SocialPill href="https://github.com/saandys">
 					<Mail class="size-6" />
 					sandramonterosanz@gmail.com
-				</SocialPill>
+				</SocialPill> 
 			
 			</nav>
 
 		</SectionContainer>
-		<SectionContainer id="experiencia">
+		<SectionContainer id="experience">
 			<h2 class="text-2xl font-semibold mb-6 flex gap-x-2 items-center">
 				<Briefcase class="size-6"/>
-					Experiencia Laboral</h2>
+				Work Experience</h2>
 			<Experience />
 		</SectionContainer>
 	</main>
