Añadidos los proyectos

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,20 +4,20 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
     {
         date: "September 2023 - Currently",
-        title: "Software Developer",
+        title: "Software Developer - Servitux",
         description: "Footwear management application development with the TALL stack. Front end and back end development.",
         link :""
     },
     {
         date: "February 2023 - April 2023",
-        title: "Web Developer",
+        title: "Web Developer - Fenix Academy",
         description: "Website development with academy and online store in CMS Wordpress, including instructors, students, courses, etc.",
         link :""
     }
 ]
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700">                  
+<ol class="relative border-s border-gray-200 ml-3 dark:border-gray-700">                  
     {
         EXPERIENCE.map(experience => (
             <li class="mb-10 ms-4">
