--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from '../components/Header.astro';
 import '@fontsource-variable/onest';
 import { ViewTransitions } from "astro:transitions"
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -25,6 +26,7 @@ const { description, title } = Astro.props;
 		<div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -39,7 +41,7 @@ const { description, title } = Astro.props;
 		background: #050505;
 		display: flex;
 		flex-direction: column;
-		min-width: 100vh;
+
 		overscroll-behavior: none;
 	}
 
