--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,17 +10,19 @@ import Experience from '../components/Experience.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import { ACTION_ERROR_CODES } from 'astro:actions';
 import Briefcase from '../icons/Briefcase.astro';
+import Code from '../icons/Code.astro';
+import Projects from '../components/Projects.astro';
 ---
 
 <Layout title="Sandra Montero. Computer Engineer specialized in AI."
 		description="">
-	<main>
+	<main class="px-4">
 		<SectionContainer class="py-44 pb-20">
-			<img class="rounded-full w-12 h-12 mb-4" 
+			<img class="rounded-full size-12 mb-4" 
 				src="https://content.cuerpomente.com/medio/2022/07/13/flores-simbolismo-espiritualidad_09ff3f15_1200x1200.jpg"
 				alt="sandra photo" />
-			<h1 class="text-white text-5xl font-bold flex flex-row
-				gap-x-4 pb-10">
+			<h1 class="text-white text-2xl lg:text-5xl font-bold flex flex-row
+				gap-x-4 pb-6 lg:pb-10">
 				Hey, I'm sandra  
 				<a
 					href="https://www.linkedin.com/in/sandramonterosanz/"
@@ -33,23 +35,23 @@ import Briefcase from '../icons/Briefcase.astro';
 				</a>
 			</h1>
 
-			<h2 class="text-2xl opacity-80 text-wrap">
+			<h2 class="text-xl lg:text-2xl opacity-80 text-wrap max-w-[700px]">
 				<span class="text-purple-600">Computer Engineer</span> <span class="opacity-80">specialized in </span>
 				<span class="font-bold">AI</span>.
 				<span class="text-red-100/90"> From Alicante, España. </span>
 			</h2>
 
-			<nav class="flex gap-x-4 mt-8">
+			<nav class="flex gap-4 mt-8 flex-wrap">
 				<SocialPill href="https://www.linkedin.com/in/sandramonterosanz/">
-						<LinkedIn class="size-6" />
+						<LinkedIn class="size-4 md:size-6" />
 						LinkedIn
 				</SocialPill>
 				<SocialPill href="https://github.com/saandys">
-					<GitHub class="size-6" />
+					<GitHub class="size-4 md:size-6" />
 						GitHub
 				</SocialPill>
-				<SocialPill href="https://github.com/saandys">
-					<Mail class="size-6" />
+				<SocialPill href="mailto:sandramonterosanz@gmail.com">
+					<Mail class="size-4 md:size-6" />
 					sandramonterosanz@gmail.com
 				</SocialPill> 
 			
@@ -57,10 +59,17 @@ import Briefcase from '../icons/Briefcase.astro';
 
 		</SectionContainer>
 		<SectionContainer id="experience">
-			<h2 class="text-2xl font-semibold mb-6 flex gap-x-2 items-center">
+			<h2 class="text-3xl font-semibold mb-6 flex gap-x-2 items-center">
 				<Briefcase class="size-6"/>
 				Work Experience</h2>
 			<Experience />
+		</SectionContainer>
+
+		<SectionContainer id="projects">
+			<h2 class="text-3xl font-semibold mb-6 flex gap-x-2 items-center">
+				<Code class="size-6"/>
+				Projects</h2>
+			<Projects />
 		</SectionContainer>
 	</main>
 </Layout>
